[package]
name = "tszip"
version = "0.1.1"
authors = ["Michael Ciraci"]
description = "Simple command line utility for quickly compressing and decompressing a directory through tar and snap compression"
license = "BSD-3-Clause"
homepage = "https://github.com/michaelciraci/tszip"
repository = "https://github.com/michaelciraci/tszip"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
snap = "1"
tar = "0.4"
